--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,61 @@
+# Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+dist/
+build/
+out/
+
+# User data (don't include personal songs and playlists)
+assets/songs/*.mp3
+assets/songs/*.wav
+assets/songs/*.m4a
+assets/songs/*.flac
+assets/songs/*.ogg
+assets/songs/*.aac
+assets/songs/*.json
+data/playlists.json
+
+# Keep the songs directory structure but not the files
+!assets/songs/.gitkeep
+
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Logs
+logs
 *.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Electron builder output
+dist_electron/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
