--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,10 @@ on:
   push:
     tags:
       - 'v*'
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  build:
+  release:
     runs-on: ${{ matrix.os }}
     
     strategy:
@@ -16,10 +15,11 @@ jobs:
         os: [macos-latest, windows-latest, ubuntu-latest]
     
     steps:
-    - uses: actions/checkout@v3
+    - name: Check out Git repository
+      uses: actions/checkout@v4
     
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
+    - name: Install Node.js
+      uses: actions/setup-node@v4
       with:
         node-version: '18'
         cache: 'npm'
@@ -27,42 +27,48 @@ jobs:
     - name: Install dependencies
       run: npm ci
     
-    - name: Build application
+    - name: Build Electron app
       run: npm run build
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3
+    - name: Upload artifacts (macOS)
+      if: matrix.os == 'macos-latest'
+      uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.os }}-build
-        path: dist/
-        
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+        name: macos-installers
+        path: |
+          dist/*.dmg
+          dist/*.dmg.blockmap
     
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
+    - name: Upload artifacts (Windows)
+      if: matrix.os == 'windows-latest'
+      uses: actions/upload-artifact@v4
       with:
-        node-version: '18'
-        cache: 'npm'
+        name: windows-installers
+        path: |
+          dist/*.exe
+          dist/*.exe.blockmap
     
-    - name: Install dependencies
-      run: npm ci
+    - name: Upload artifacts (Linux)
+      if: matrix.os == 'ubuntu-latest'
+      uses: actions/upload-artifact@v4
+      with:
+        name: linux-installers
+        path: |
+          dist/*.AppImage
+          dist/*.AppImage.blockmap
     
-    - name: Build and release
-      run: npm run build
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Release
+    - name: Release to GitHub
+      if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
-        files: dist/*
+        files: |
+          dist/*.dmg
+          dist/*.exe
+          dist/*.AppImage
+          dist/*.blockmap
+        draft: false
+        prerelease: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
