--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
+        os: [macos-latest, windows-latest]
     
     steps:
     - name: Check out Git repository
@@ -50,14 +50,7 @@ jobs:
           dist/*.exe
           dist/*.exe.blockmap
     
-    - name: Upload artifacts (Linux)
-      if: matrix.os == 'ubuntu-latest'
-      uses: actions/upload-artifact@v4
-      with:
-        name: linux-installers
-        path: |
-          dist/*.AppImage
-          dist/*.AppImage.blockmap
+
     
     - name: Release to GitHub
       if: startsWith(github.ref, 'refs/tags/')
@@ -66,7 +59,6 @@ jobs:
         files: |
           dist/*.dmg
           dist/*.exe
-          dist/*.AppImage
           dist/*.blockmap
         draft: false
         prerelease: false
